--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="card">
             <div class="card-horizontal">
               <div class="card-img">
-                <img class="" src="images/facebook2-2.jpg" alt="Card image cap">
+                <img class="img-fluid" src="images/facebook2-2.jpg" alt="Card image cap">
               </div>
               <div class="card-body">
                 <p>I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
