--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card">
             <div class="card-horizontal">
-              <div class="card-img">
+              <div class="about-me-card-img">
                 <img class="img-fluid" src="images/facebook2-2.jpg" alt="Card image cap">
               </div>
               <div class="card-body">
