--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+        <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
           <div class="card">
             <div class="card-horizontal">
               <div class="about-me-card-img">
