--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="col-md-12">
 
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                <figure class="cc-effect"><img src="images/itatiaia.jpg" alt="Image" />
+                <figure class="cc-effect"><img src="images/itatiaia.jpg" alt="Image" class="img-fluid gallery-img"/>
                   <figcaption>
                     <div class="h4">Itatiaia National Park</div>
                   </figcaption>
@@ -304,7 +304,15 @@
               </a>
             </div>
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                <figure class="cc-effect"><img src="images/milky-way-vail.png" alt="Image" />
+                <figure class="cc-effect"><img src="images/milky-way-vail.png" alt="Image" class="img-fluid gallery-img"/>
+                  <figcaption>
+                    <div class="h4">Milky Way in Vail, Colorado</div>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+                <figure class="cc-effect"><img src="images/cerrado-wildflowers.jpg" alt="Image" class="img-fluid gallery-img"/>
                   <figcaption>
                     <div class="h4">Milky Way in Vail, Colorado</div>
                   </figcaption>
