--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       <div class="ml-auto mr-auto">
         <div class="row">
 
-          <div class="col-md-12">
+          <div class="col-md-3">
 
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
                 <figure class="cc-effect"><img src="images/itatiaia.jpg" alt="Image" class="img-fluid gallery-img"/>
@@ -314,7 +314,7 @@
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
                 <figure class="cc-effect"><img src="images/cerrado-wildflowers.jpg" alt="Image" class="img-fluid gallery-img"/>
                   <figcaption>
-                    <div class="h4">Milky Way in Vail, Colorado</div>
+                    <div class="h4">Wild flowers</div>
                   </figcaption>
                 </figure>
               </a>
