--- a/index.html
+++ b/index.html
@@ -293,31 +293,37 @@
       <div class="ml-auto mr-auto">
         <div class="row">
 
-          <div class="col-md-6">
+          <div class="col-md-12">
 
-            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                <figure class="cc-effect"><img src="images/itatiaia.jpg" alt="Image" class="img-fluid gallery-img"/>
-                  <figcaption>
-                    <div class="h4">Itatiaia National Park</div>
-                  </figcaption>
-                </figure>
-              </a>
+            <div class="col-md-4">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+                  <figure class="cc-effect"><img src="images/itatiaia.jpg" alt="Image" class="img-fluid gallery-img"/>
+                    <figcaption>
+                      <div class="h4">Itatiaia National Park</div>
+                    </figcaption>
+                  </figure>
+                </a>
+              </div>
             </div>
-            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                <figure class="cc-effect"><img src="images/milky-way-vail.png" alt="Image" class="img-fluid gallery-img"/>
-                  <figcaption>
-                    <div class="h4">Milky Way in Vail, Colorado</div>
-                  </figcaption>
-                </figure>
-              </a>
+            <div class="col-md-4">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+                  <figure class="cc-effect"><img src="images/milky-way-vail.png" alt="Image" class="img-fluid gallery-img"/>
+                    <figcaption>
+                      <div class="h4">Milky Way in Vail, Colorado</div>
+                    </figcaption>
+                  </figure>
+                </a>
+              </div>
             </div>
-            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                <figure class="cc-effect"><img src="images/cerrado-wildflowers.jpg" alt="Image" class="img-fluid gallery-img"/>
-                  <figcaption>
-                    <div class="h4">Wild flowers</div>
-                  </figcaption>
-                </figure>
-              </a>
+            <div class="col-md-4">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+                  <figure class="cc-effect"><img src="images/cerrado-wildflowers.jpg" alt="Image" class="img-fluid gallery-img"/>
+                    <figcaption>
+                      <div class="h4">Wild flowers</div>
+                    </figcaption>
+                  </figure>
+                </a>
+              </div>
             </div>
 
             
