--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
         <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
           <div class="card">
             <div class="card-horizontal">
-              <div class="about-me-card-img">
-                <img class="img-fluid" src="images/facebook2-2.jpg" alt="Card image cap">
-              </div>
+              <img class="img-fluid about-me-card-img" src="images/facebook2-2.jpg" alt="Card image cap">
               <div class="card-body">
                 <p>I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
                 bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
