--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
-          <div class="card">
-            <div class="card-horizontal">
+          <div class="card card-horizontal">
+          
               <div class="about-me-card-img">
                 <img class="img-fluid about-me-card-img" src="images/facebook2-2.jpg" alt="Card image cap">
               </div>
@@ -89,7 +89,7 @@
                 many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.</p>
               </div>
             </div>
-          </div>
+          
         </div>
       </div>
     </div>
