--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="card">
             <div class="card-horizontal">
               <div class="about-me-card-img">
-                <img class="img-fluid about-me-card-img" src="images/facebook2-2.jpg" alt="Card image cap">
+                <img class="img-fluid about-me-card-img" src="images/eu-mata-atlantica.jpg" alt="Card image cap">
               </div>
               <div class="card-body">
                 <p>I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
@@ -289,10 +289,7 @@
     <div class="tab-pane active" id="web-development">
       <div class="ml-auto mr-auto">
         <div class="row">
-
-          <div class="col-md-12">
-
-            <div class="col-md-4">
+            <div class="col-md-12">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
                   <figure class="cc-effect"><img src="images/itatiaia.jpg" alt="Image" class="img-fluid gallery-img"/>
                     <figcaption>
@@ -302,7 +299,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-12">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
                   <figure class="cc-effect"><img src="images/milky-way-vail.png" alt="Image" class="img-fluid gallery-img"/>
                     <figcaption>
@@ -312,7 +309,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-12">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
                   <figure class="cc-effect"><img src="images/cerrado-wildflowers.jpg" alt="Image" class="img-fluid gallery-img"/>
                     <figcaption>
@@ -322,9 +319,6 @@
                 </a>
               </div>
             </div>
-
-            
-          </div>
         </div>
       </div>
     </div>
