--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
       <div class="row">
         <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
           <div class="card">
+            <!--
             <div class="card-horizontal">
               <div class="about-me-card-img">
                 <img class="img-fluid about-me-card-img" src="images/eu-mata-atlantica.jpg" alt="Card image cap">
-              </div>
+              </div>-->
               <div class="card-body">
                 <p>I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
                 bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
@@ -304,16 +305,6 @@
                   <figure class="cc-effect"><img src="images/milky-way-vail.png" alt="Image" class="img-fluid gallery-img"/>
                     <figcaption>
                       <div class="h4">Milky Way in Vail, Colorado</div>
-                    </figcaption>
-                  </figure>
-                </a>
-              </div>
-            </div>
-            <div class="col-md-12">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                  <figure class="cc-effect"><img src="images/cerrado-wildflowers.jpg" alt="Image" class="img-fluid gallery-img"/>
-                    <figcaption>
-                      <div class="h4">Wild flowers</div>
                     </figcaption>
                   </figure>
                 </a>
