--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
           <div class="button-container">
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/jacquelinemattos" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github icon-style"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/mattosjacq" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
-        </div>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.researchgate.net/profile/Jacqueline-De-Mattos" rel="tooltip"
+                          title="Follow me on ResearchGate"><i class="fa-brands fa-researchgate"></i></a>
+
+          </div>
       </div>
     </div>
   </div>
