--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/jacquelinemattos" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github icon-style"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/mattosjacq" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.researchgate.net/profile/Jacqueline-De-Mattos" rel="tooltip"
-                          title="Follow me on ResearchGate"><i class="fa-brands fa-researchgate"></i></a>
+                          title="Follow me on ResearchGate"><i class="fab fa-researchgate"></i></a>
+                          
 
           </div>
       </div>
