--- a/index.html
+++ b/index.html
@@ -100,23 +100,24 @@
         <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
           <div class="card">
             <div class="row">
-              <div class="col-lg-7 col-md-12">
-                <div class="head-about mb-4">
-                  <p>
-                    I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
-                    bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
-                    and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
-                    version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
-                    de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with
-                    many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
-                  </p>
+              <div class="card-body">
+                <div class="col-lg-7 col-md-12">
+                  <div class="head-about mb-4">
+                    <p>
+                      I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
+                      bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
+                      and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
+                      version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
+                      de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with
+                      many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="col-md-5 hidden-md">
-                <div class="img-about">
-                  <a href="images/cerrado-field-jacq.jpg" data-lightbox="me"
-                    data-title=""><img class="img-fluid"
-                      src="" alt=""></a>
+                <div class="col-md-5 hidden-md">
+                  <div class="img-about card-img">
+                    <a href="images/cerrado-field-jacq.jpg" data-lightbox="me"
+                      data-title=""><img class="img-fluid about-me-card-img"></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -194,7 +195,7 @@
 
     <div class="h4 text-center mb-4 title">Research Projects</div>
 
-    <!--
+    
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -210,7 +211,7 @@
           </div>
         </div>
       </div>
-    </div>-->
+    </div>
 
     
     <div class="card">
