--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
           <div class="card">
             <div class="row">
               <div class="card-body">
-                <div class="col-lg-7 col-md-12">
-                  <div class="head-about mb-4">
+                <div class="col-md-8">
                     <p>
                       I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
                       bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
@@ -111,9 +110,8 @@
                       de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with
                       many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
                     </p>
-                  </div>
                 </div>
-                <div class="col-md-5 hidden-md">
+                <div class="col-md-4">
                   <div class="img-about card-img">
                     <a href="images/cerrado-field-jacq.jpg" data-lightbox="me"
                       data-title=""><img class="img-fluid about-me-card-img"></a>
@@ -200,10 +198,6 @@
       <div class="row">
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card">
-            <div class="card-horizontal">
-              <div class="card-img">
-                <img class="" src="images/DSC_0023.JPG" alt="Card image cap">
-              </div>
               <div class="card-body">
                 <p class="h5">Evolutionary genomics of orchid populations in the coast of Brazil</p>
               </div>
