--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <div class="h4 text-center mb-4 title">Research Projects</div>
 
-    <div class="col-md-12">
+    <div class="col-md-12 d-inline">
       <div class="col-md-3">
         <div class="card d-inline" width="50%">
           <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
