--- a/index.html
+++ b/index.html
@@ -161,20 +161,10 @@
   <div class="container cc-experience">
 
     <div class="h4 text-center mb-4 title">Research Projects</div>
-
-    <div class="col-md-12 d-inline">
-      <div class="col-md-3">
-        <div class="card d-inline" width="50%">
-          <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title"><a>Evolutionary genomics of orchid populations in the coast of Brazil</a></h4>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">Project on ResearchGate</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-          <div class="card d-inline" width="50%">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="col-md-3">
+          <div class="card d-inline" width="70%">
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Evolutionary genomics of orchid populations in the coast of Brazil</a></h4>
@@ -182,9 +172,19 @@
               <a href="#" class="btn btn-primary">Project on ResearchGate</a>
             </div>
           </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card d-inline" width="70%">
+              <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
+              <div class="card-body">
+                <h4 class="card-title"><a>Evolutionary genomics of orchid populations in the coast of Brazil</a></h4>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary">Project on ResearchGate</a>
+              </div>
+            </div>
+        </div>
       </div>
     </div>
-
 
     
     <div class="container-fluid">
