--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
     <div class="h4 text-center mb-4 title">Research Projects</div>
     <div class="row">
       <div class="col-md-12">
-        <div class="col-md-3">
-          <div class="card d-inline" width="70%">
+        <div class="col-md-3" style="display: inline-flex; width: 60%;">
+          <div class="card>
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Evolutionary genomics of orchid populations in the coast of Brazil</a></h4>
@@ -173,8 +173,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-            <div class="card d-inline" width="70%">
+        <div class="col-md-3" style="display: inline-flex; width: 60%;">
+            <div class="card">
               <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title"><a>Evolutionary genomics of orchid populations in the coast of Brazil</a></h4>
