--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="row">
       <div class="col-md-12" style="display: inline-flex;">
         <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 70%;">
+          <div class="card" style="width: 90%;">
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Evolutionary genomics of orchid populations in the coast of Brazil</a></h4>
@@ -174,10 +174,10 @@
           </div>
         </div>
         <div class="col-md-3" style="display: inline;">
-            <div class="card" style="width: 70%;">
-              <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
+            <div class="card" style="width: 90%;">
+              <img class="card-img-top" src="images/assembly.png" alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title"><a>Evolutionary genomics of orchid populations in the coast of Brazil</a></h4>
+                <h4 class="card-title"><a>Chromosome-scale genome assembly</a></h4>
                 <p class="card-text"></p>
                 <a href="#" class="btn btn-primary">Project on ResearchGate</a>
               </div>
@@ -185,20 +185,6 @@
         </div>
       </div>
     </div>
-
-    
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card">
-              <div class="card-body">
-                <p class="h5">Evolutionary genomics of orchid populations in the coast of Brazil</p>
-              </div>
-        </div>
-
-      </div>
-    </div>
-
     
     <div class="card">
       <div class="row">
