--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
     <div class="row">
       <div class="col-md-12" style="display: inline-flex;">
         <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 90%;">
+          <div class="card" style="width: 100%;">
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title"><a>Evolutionary genomics of orchid populations in the coast of Brazil</a></h4>
+              <h4 class="card-title"><a>Evolutionary genomics of Epidendrum fulgens populations</a></h4>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Project on ResearchGate</a>
             </div>
           </div>
         </div>
         <div class="col-md-3" style="display: inline;">
-            <div class="card" style="width: 90%;">
+            <div class="card" style="width: 100%;">
               <img class="card-img-top" src="images/assembly.png" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title"><a>Chromosome-scale genome assembly</a></h4>
@@ -183,51 +183,28 @@
               </div>
             </div>
         </div>
-      </div>
-    </div>
-    
-    <div class="card">
-      <div class="row">
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Chromosome-scale genome assembly</div>
+        <div class="col-md-3" style="display: inline;">
+          <div class="card" style="width: 100%;">
+            <img class="card-img-top" src="images/mata-atlantica.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title"><a>Chloroplast genome evolution & phylogenetics</a></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Project on ResearchGate</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3" style="display: inline;">
+          <div class="card" style="width: 100%;">
+            <img class="card-img-top" src="images/floripa_2.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title"><a>Local adaptation and natural selection of Epidendrum fulgens populations</a></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Project on ResearchGate</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    
-    <div class="card">
-      <div class="row">
-        <!--<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
-            <p>PhD</p>
-            <div class="h6">University of Campinas/Brazil</div>
-          </div>
-        </div>-->
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Chloroplast genome evolution & phylogenetics</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="row">
-        <!--<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-              <div class="card-body cc-experience-header">
-                <p>PhD</p>
-                <div class="h6">University of Campinas/Brazil</div>
-              </div>
-            </div>-->
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Gene expression and exploration of natural selection patterns along a latitudinal gradient</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  
+    </div>  
   </div>
 </div>
 
