--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="card" style="width: 100%;">
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title"><a>Evolutionary genomics of Epidendrum fulgens populations</a></h4>
+              <h4 class="card-title"><a>Evolutionary genomics of <i>Epidendrum fulgens</i> populations</a></h4>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Project on ResearchGate</a>
             </div>
@@ -185,7 +185,7 @@
         </div>
         <div class="col-md-3" style="display: inline;">
           <div class="card" style="width: 100%;">
-            <img class="card-img-top" src="images/mata-atlantica.jpg" alt="Card image cap">
+            <img class="card-img-top" src="images/Epidendrum-tree-draft.PNG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Chloroplast genome evolution & phylogenetics</a></h4>
               <p class="card-text"></p>
@@ -197,7 +197,7 @@
           <div class="card" style="width: 100%;">
             <img class="card-img-top" src="images/floripa_2.jpg" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title"><a>Local adaptation and natural selection of Epidendrum fulgens populations</a></h4>
+              <h4 class="card-title"><a>Local adaptation and natural selection along an environmental gradient</a></h4>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Project on ResearchGate</a>
             </div>
