--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="row">
       <div class="col-md-12" style="display: inline-flex;">
         <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 100%;">
+          <div class="card" style="width: 100%; height: 200px;">
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Evolutionary genomics of <i>Epidendrum fulgens</i> populations</a></h4>
@@ -174,7 +174,7 @@
           </div>
         </div>
         <div class="col-md-3" style="display: inline;">
-            <div class="card" style="width: 100%;">
+            <div class="card" style="width: 100%; height: 200px;">
               <img class="card-img-top" src="images/assembly.png" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title"><a>Chromosome-scale genome assembly</a></h4>
@@ -184,7 +184,7 @@
             </div>
         </div>
         <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 100%;">
+          <div class="card" style="width: 100%; height: 200px;">
             <img class="card-img-top" src="images/Epidendrum-tree-draft.PNG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Chloroplast genome evolution & phylogenetics</a></h4>
@@ -194,7 +194,7 @@
           </div>
         </div>
         <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 100%;">
+          <div class="card" style="width: 100%; height: 200px;">
             <img class="card-img-top" src="images/floripa_2.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Local adaptation and natural selection along an environmental gradient</a></h4>
