--- a/index.html
+++ b/index.html
@@ -164,17 +164,21 @@
     <div class="row">
       <div class="col-md-12" style="display: inline-flex;">
         <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 100%; height: 200px;">
+          <div class="card" style="width: 100%; height: 500px;">
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Evolutionary genomics of <i>Epidendrum fulgens</i> populations</a></h4>
-              <p class="card-text"></p>
+              <p class="card-text">Epidendrum (Orchidaceae) is one of the largest plant genera in the neotropics, accounting for more than 1500 species and
+              a high variety of morphological and ecological adaptations. However, it has been understudied and lacks publicly
+              available genetic and genomic resources, making it challenging for the advancement of neotropical and orchid
+              conservation research. We intend to present the first chromosome-scale genome assembly of the orchid Epidendrum fulgens, a perennial-terrestrial that occurs along the coast of Brazil, in the largely deforested Brazilian
+              Atlantic Forest. The genome assembly was performed using HiFi PacBio and Omni-C technologies.</p>
               <a href="#" class="btn btn-primary">Project on ResearchGate</a>
             </div>
           </div>
         </div>
         <div class="col-md-3" style="display: inline;">
-            <div class="card" style="width: 100%; height: 200px;">
+            <div class="card" style="width: 100%; height: 500px;">
               <img class="card-img-top" src="images/assembly.png" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title"><a>Chromosome-scale genome assembly</a></h4>
@@ -184,7 +188,7 @@
             </div>
         </div>
         <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 100%; height: 200px;">
+          <div class="card" style="width: 100%; height: 500px;">
             <img class="card-img-top" src="images/Epidendrum-tree-draft.PNG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Chloroplast genome evolution & phylogenetics</a></h4>
@@ -194,7 +198,7 @@
           </div>
         </div>
         <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 100%; height: 200px;">
+          <div class="card" style="width: 100%; height: 500px;">
             <img class="card-img-top" src="images/floripa_2.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Local adaptation and natural selection along an environmental gradient</a></h4>
