--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
               <p class="card-text">Epidendrum (Orchidaceae) is one of the largest plant genera in the neotropics, accounting for more than 1500 species and
               a high variety of morphological and ecological adaptations. However, it has been understudied and lacks publicly
               available genetic and genomic resources, making it challenging for the advancement of neotropical and orchid
-              conservation research. We intend to present the first chromosome-scale genome assembly of the orchid Epidendrum fulgens, a perennial-terrestrial that occurs along the coast of Brazil, in the largely deforested Brazilian
-              Atlantic Forest. The genome assembly was performed using HiFi PacBio and Omni-C technologies.</p>
+              conservation research.</p>
               <a href="#" class="btn btn-primary">Project on ResearchGate</a>
             </div>
           </div>
@@ -182,7 +181,7 @@
               <img class="card-img-top" src="images/assembly.png" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title"><a>Chromosome-scale genome assembly</a></h4>
-                <p class="card-text"></p>
+                <p class="card-text">Attempting to assemble for the first time the whole genome of the orchid <i>Epidendrum fulgens</i>, on a chromosome-scale.</p>
                 <a href="#" class="btn btn-primary">Project on ResearchGate</a>
               </div>
             </div>
