--- a/index.html
+++ b/index.html
@@ -302,15 +302,25 @@
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
                 <img class="card-img-top" src="images/garden-of-gods-3.jpg" alt="Card image cap">
-                <div class="card-body">
-                </div>
               </div>
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
                 <img class="card-img-top" src="images/via-lactea.jpg" alt="Card image cap">
-                <div class="card-body">
-                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12" style="display: inline-flex;">
+            <div class="col-md-6" style="display: inline;">
+              <div class="card" style="width: 100%; height: auto;">
+                <img class="card-img-top" src="images/itatiaia.jpg" alt="Card image cap">
+              </div>
+            </div>
+            <div class="col-md-6" style="display: inline;">
+              <div class="card" style="width: 100%; height: auto;">
+                <img class="card-img-top" src="images/cerrado-wildflowers.jpg" alt="Card image cap">
               </div>
             </div>
           </div>
