--- a/index.html
+++ b/index.html
@@ -260,18 +260,13 @@
 
 <div class="section" id="gallery">
   <div class=" container">
+
   <div class="row">
     <div class="col-md-6 ml-auto mr-auto">
       <div class="h4 text-center mb-4 title">Nature photography</div>
-      <!--<div class="nav-align-center">
-          <ul class="nav nav-pills nav-pills-primary" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-picture-o" aria-hidden="true"></i></a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
-          </ul>
-        </div>-->
     </div>
   </div>
+
   <div class="tab-content gallery mt-5">
     <div class="tab-pane active" id="web-development">
       <div class="ml-auto mr-auto">
@@ -297,6 +292,10 @@
               </div>
             </div>
         </div>
+
+<div class="tab-content gallery mt-5">
+  <div class="tab-pane active" id="web-development">
+    <div class="ml-auto mr-auto">
         <div class="row">
           <div class="col-md-12" style="display: inline-flex;">
             <div class="col-md-6" style="display: inline;">
@@ -325,9 +324,10 @@
             </div>
           </div>
         </div>
-      </div>
     </div>
   </div>
+</div>
+
 </div>
 </div>
 
