--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 </div>
 
 <div class="section" id="gallery">
-  <div class=" container">
+  <div class="container">
 
   <div class="row">
     <div class="col-md-6 ml-auto mr-auto">
@@ -295,19 +295,19 @@
         </div>
 -->
 
-<div class="tab-content gallery mt-5">
+  <div class="tab-content gallery mt-5">
   <div class="tab-pane active" id="web-development">
     <div class="ml-auto mr-auto">
         <div class="row">
           <div class="col-md-12" style="display: inline-flex;">
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top" src="images/garden-of-gods-3.jpg" alt="Card image cap">
+                <img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-3.jpg" alt="Card image cap">
               </div>
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top" src="images/via-lactea.jpg" alt="Card image cap">
+                <img class="card-img-top img-fluid gallery-img" src="images/via-lactea.jpg" alt="Card image cap">
               </div>
             </div>
           </div>
@@ -316,21 +316,21 @@
           <div class="col-md-12" style="display: inline-flex;">
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top" src="images/itatiaia.jpg" alt="Card image cap">
+                <img class="card-img-top img-fluid gallery-img" src="images/itatiaia.jpg" alt="Card image cap">
               </div>
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top" src="images/cerrado-wildflowers.jpg" alt="Card image cap">
+                <img class="card-img-top img-fluid gallery-img" src="images/cerrado-wildflowers.jpg" alt="Card image cap">
               </div>
             </div>
           </div>
         </div>
     </div>
   </div>
-</div>
+  </div>
 
-</div>
+  </div>
 </div>
 
 
