--- a/index.html
+++ b/index.html
@@ -326,6 +326,20 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-12" style="display: inline-flex;">
+            <div class="col-md-6" style="display: inline;">
+              <div class="card" style="width: 100%; height: auto;">
+                <img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica.jpg" alt="Card image cap">
+              </div>
+            </div>
+            <div class="col-md-6" style="display: inline;">
+              <div class="card" style="width: 100%; height: auto;">
+                <img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica-2.jpg" alt="Card image cap">
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
   </div>
