--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
     <div class="h4 text-center mb-4 title">Research Projects</div>
     <div class="row">
       <div class="col-md-12" style="display: inline-flex;">
-        <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 100%; height: auto;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="col-md-3" style="display: inline;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="card" style="width: 100%; height: auto;">
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Evolutionary genomics of <i>Epidendrum fulgens</i> populations</a></h4>
@@ -176,8 +176,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3" style="display: inline;">
-            <div class="card" style="width: 100%; height: auto;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="col-md-3" style="display: inline;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+            <div class="card" style="width: 100%; height: auto;">
               <img class="card-img-top" src="images/assembly.png" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title"><a>Chromosome-scale genome assembly</a></h4>
@@ -186,8 +186,8 @@
               </div>
             </div>
         </div>
-        <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 100%; height: auto;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="col-md-3" style="display: inline;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="card" style="width: 100%; height: auto;">
             <img class="card-img-top" src="images/Epidendrum-tree-draft.PNG" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Chloroplast genome evolution & phylogenetics</a></h4>
@@ -196,8 +196,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3" style="display: inline;">
-          <div class="card" style="width: 100%; height: auto;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="col-md-3" style="display: inline;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="card" style="width: 100%; height: auto;" >
             <img class="card-img-top" src="images/floripa_2.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title"><a>Local adaptation and natural selection along an environmental gradient</a></h4>
